# introfiscomp

./: .env.sample  .gitignore  README.md  build.py  explore.ipynb  main.py  parsed_article.json  pyproject.toml  requirements.txt  run-build.sh  run-dev.sh  run-prod.sh  server.py  tailwind.config.js
app/: __init__.py  config.py  settings.py  utils.py
app/articles/: core.py  processors.py  utils.py
static/articles/: 01_algoritimos.json  02_estruturas.json  03_python.json
static/articles/01_algoritimos/: 00_meta.md  01_algoritimos.md  04_variaveis.md  05_expressoesBooleanas.md  08_escopo.md  08_fluxoDeExecucao.md  09_exerciciosResolvidos.md  10_exerciciosPropostos.md
static/articles/01_introducao/01_algoritimos/: 02_atribuicoes.md  03_expressoes.md  06_estruturaCondicional.md  07_repeticao.md  09_exerciciosResolvidos.md
static/articles/01_introducao/02_estruturas/: 01_introducao.md  04_dicionarios.md  05_exercicios-resolvidos.md
static/articles/01_introducao/03_exercícios/: 01_exercicios_resolvidos.md  02_exercicios_propsotos.md
static/articles/02_estruturas/: 02_listas-e-vetores.md  03_conjuntos.md
static/articles/03_bibliotecas/: 00_meta.md  01_numpy.md
static/context/: index.json  navbar.json
static/css/: input.css  prism.css  styles.css
static/js/: .js.template  01_introducao.js  02_estruturas.js  app.js  home.js  menu.js
static/js/modules/: apps.js  base.js  components.js  prism.js
templates/: .articles.html.templates  base.html  home.html  navbar.html
templates/01_algoritimos/: 01_algoritimos.html  02_estruturas.html
(+38 files in other folders)
