[tool.poetry]
name = "introfiscomp"
version = "0.1.0"
description = ""
authors = ["bessavagner <bessavagner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0.post1"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
